# crashomon

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  DEVELOP.md  INSTALL.md  PLAN.md  README.md  pyproject.toml
bench/: CMakeLists.txt  bench_minidump_reader.cpp  bench_tombstone_formatter.cpp
claude_plans/: 2026-03-29-replace-sentry-native-with-crashpad.md  2026-03-29-watcherd-as-crashpad-handler.md  2026-03-31-cpp17-to-cpp20-migration.md  2026-03-31-shared-socket-refactor.md  2026-03-31-stress-test-daemon.md  2026-04-01-extract-tombstone-library.md  2026-04-01-rewrite-analyze-in-python.md  2026-04-03-fill-technical-gaps.md  2026-04-04-crashomon-assessment-improvements.md  2026-04-14-self-sufficient-tombstones.md  2026-04-15-cmake-symbol-store.md  2026-04-17-analysis-plugins.md  2026-04-17-crashomon-tombstone-redesign-design.md  2026-04-17-crashomon-tombstone-redesign-impl.md
cmake/: breakpad.cmake  crashomon_symbols.cmake  fetch_breakpad_deps.cmake  libcurl_stub.cmake  rust_minidump.cmake  store_sym_impl.cmake  store_sysroot_impl.cmake
cmake/curl_stub/: curl.h
cmake/dump_syms_host/: CMakeLists.txt
cmake/host_toolkit/: CMakeLists.txt
daemon/: CMakeLists.txt  crash_socket.cpp  crash_socket.h  disk_manager.cpp  disk_manager.h  log.h  main.cpp  minidump_patcher.cpp  minidump_patcher.h  minidump_reader.cpp  minidump_reader.h  real_tombstone.cpp  tombstone_formatter.cpp  tombstone_formatter.h  watcher.cpp  watcher.h  worker.cpp  worker.h
daemon/test/: CMakeLists.txt  test_minidump_patcher.cpp  test_worker.cpp
daemon/tombstone/: CMakeLists.txt  minidump_reader.cpp  minidump_reader.h  register_extract.cpp  tombstone_formatter.cpp  tombstone_formatter.h
daemon/tombstone/test/: CMakeLists.txt  gen_synthetic_fixtures.cpp  test_minidump_reader.cpp  test_register_extract.cpp  test_tombstone_formatter.cpp
demo/: .gitignore  CMakeLists.txt  demo_crasher.cpp  run_demo.sh
docker/: .env.example  docker-compose.yml
docs/: frame_pointer_aarch64.md  stack_walking_accuracy.md
docs/claude_plans/: 2026-04-20-terminate-hooks.md
docs/claude_plans/specs/: 2026-04-20-terminate-hooks-design.md
docs/superpowers/plans/: 2026-04-26-host-toolkit.md  2026-04-29-upload-error-display.md
docs/superpowers/specs/: 2026-04-23-docker-compose-design.md  2026-04-26-host-toolkit-design.md  2026-04-29-upload-error-display-design.md
examples/: CMakeLists.txt  abort.c  multithread_crash.c  patchdmp_demo.py  segfault.c  segfault.cpp
examples/stackwalking_cases/: README.md  generate_traces.sh  sample_traces.md  takeaways.md
examples/stackwalking_cases/01_all_cfi/: Makefile  crasher  crasher.c
examples/stackwalking_cases/02_frame_pointer/: Makefile  crasher  crasher.c
examples/stackwalking_cases/03_scan/: Makefile  crasher  crasher.c
examples/stackwalking_cases/04_mixed/: Makefile  cfi_part.c  crasher  fp_part.c  main.c  mixed.h  scan_part.c
examples/stackwalking_cases/05_portable_explicit/: Makefile  crasher.c  crasher_cfi  crasher_fp  crasher_scan
examples/stackwalking_cases/06_optimization_levels/: Makefile  crasher.c  crasher_O0  crasher_O1  crasher_O2  crasher_O3
lib/: CMakeLists.txt  crashomon.c  crashomon.cpp  crashomon.h  crashomon_internal.h  exception_capture.cpp
lib/test/: CMakeLists.txt  test_connect_retry.cpp  test_crashomon.cpp  test_terminate_hooks.cpp
systemd/: crashomon-watcherd.service
systemd/example-app.service.d/: crashomon.conf
test/: CLAUDE.md  CMakeLists.txt  demo_crash.sh  demo_symbolicated.sh  gen_fixtures.sh  gen_synthetic_fixtures.cpp  integration_test.sh  run_tests.sh  stress_test.sh  test_connect_retry.cpp  test_crashomon.cpp  test_disk_manager.cpp  test_dump_syms_smoke.sh  test_log_parser.cpp  test_minidump_reader.cpp  test_register_extract.cpp  test_run_analyze.sh  test_symbol_store.sh  test_syms.sh  test_tags.cpp  test_tombstone_formatter.cpp  test_worker.cpp
test/fixtures/syms/: libbar.c  libfoo.c
test/fixtures/syms/plugin/: libplugin.c
tombstone/: CMakeLists.txt  minidump_reader.cpp  minidump_reader.h  register_extract.cpp  register_extract.h  tombstone_formatter.cpp  tombstone_formatter.h
tombstone/test/: test_minidump_reader.cpp  test_tombstone_formatter.cpp
tools/: pyproject.toml
tools/analyze/: CMakeLists.txt  analyze.py  crashomon-analyze  log_parser.cpp  log_parser.h  log_parser.py  main.cpp  minidump_analyzer.cpp  minidump_analyzer.h  symbolizer.cpp  symbolizer.h  symbolizer.py
tools/crashomon_tools/analyze/: analyze.py  cli.py  log_parser.py  symbolizer.py
tools/crashomon_tools/patchdmp/: __init__.py  cli.py
tools/crashomon_tools/syms/: __init__.py  cli.py
tools/patchdmp/: crashomon-patchdmp
tools/syms/: crashomon-syms
tools/tests/: test_patchdmp.py
web/: .env.example  Dockerfile  README.md  analyze.py  analyzer.py  app.py  auth.py  docker-compose.yml  entrypoint.sh  models.py  requirements.txt  symbol_store.py  symbolizer.py
web/templates/: base.html  crash_detail.html  crashes.html  dashboard.html  groups.html  symbols.html  upload.html
web/tests/: conftest.py  test_analyze.py  test_annotations.py  test_auth.py  test_csrf.py  test_e2e.py  test_log_parser.py  test_models.py  test_routes.py  test_symbol_store.py
